<resources>
    <string name="app_name">租街</string>
    <string name="wait_pay">待付款</string>
    <string name="wait_delivery">待发货</string>
    <string name="wait_takedelivery">待收货</string>
    <string name="wait_comment">待评价</string>
    <string name="refund_protect">退款/维权</string>
    <string name="user_name">用户名</string>
    <string name="my_publish">·我发布的&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;0&#160;></string>
    <string name="my_out">·我租出的&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;0&#160;></string>
    <string name="my_get">·我租到的&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;0&#160;></string>
    <string name="my_back">·已归还物品&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;0&#160;></string>
    <string name="my_backing">·正在归还物品&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;0&#160;></string>
    <string name="my_notback">·未归还物品&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;0&#160;></string>
    <string name="contacts">联系人&#160;+</string>
    <string name="contacts_info">&#160;&#160;&#160;&#160;&#160;&#160;&#160;联系人信息</string>
    <string name="notice_info">&#160;&#160;&#160;&#160;&#160;&#160;&#160;通知信息</string>
    <string name="exc_info">交易物流信息</string>
    <string name="notice_info2">通知信息</string>
    <string name="myinfo">我的消息（21）</string>
    <string name="mine">我的</string>
    <string name="publish">发布</string>
    <string name="input">&#160;&#160;&#160;在此输入标题</string>
    <string name="description">&#160;&#160;&#160;描述一下您的宝贝</string>
    <string name="price">价格：</string>
    <string name="cellway">优惠策略：</string>
    <string name="yuan">元</string>
    <string name="way1">连租3天优惠</string>
    <string name="way2">连租5天优惠</string>
    <string name="way3">连租7天优惠</string>
    <string name="way4">连租15天以上优惠</string>
    <string name="pubtostreet">发布到租街：</string>
    <string name="pubtodiff">发布到分类：</string>
    <string name="surepublish">确定发布</string>
</resources>
