<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/fragment_person"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context="com.startsmake.StreetDemo.activity.MainActivity">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <!--<include layout="@layout/ptoolbar"></include>-->


        <TextView
            android:text="@string/mine"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="25dp"
            android:id="@+id/textView8"
            android:background="@color/colorpink"
            android:gravity="center"
            android:textColor="@android:color/background_light" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="170dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent"
                    android:id="@+id/imageView" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher"
                        android:id="@+id/imageButton"
                        android:layout_gravity="center"
                        android:background="@null"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        android:layout_gravity="center"
                        android:textColor="@android:color/white"/>

                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <Button
                    android:text="@string/wait_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button1"
                    android:layout_weight="1"
                    android:background="@null"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="16dp"
                    android:maxLines="1"/>

                <Button
                    android:text="@string/wait_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button2"
                    android:layout_weight="1"
                    android:background="@null"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="16dp"
                    android:maxLines="1"/>

                <Button
                    android:text="@string/wait_takedelivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button3"
                    android:layout_weight="1"
                    android:background="@null"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="16dp"
                    android:maxLines="1"/>

                <Button
                    android:text="@string/wait_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button4"
                    android:layout_weight="1"
                    android:background="@null"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="16dp"
                    android:maxLines="1"/>

                <Button
                    android:text="@string/refund_protect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button5"
                    android:layout_weight="1"
                    android:background="@null"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="16dp"
                    android:maxLines="1"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="140dp">
            <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:background="#BFBFBF" />

            <Button
                android:text="@string/my_publish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/button6"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="#474747"
                android:textSize="18dp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#BFBFBF" />

            <Button
                android:text="@string/my_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/button7"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="#474747"
                android:textSize="18dp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#BFBFBF" />

            <Button
                android:text="@string/my_get"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/button8"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="#474747"
                android:textSize="18dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="140dp">
            <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:background="#BFBFBF" />

            <Button
                android:text="@string/my_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/button9"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="#474747"
                android:textSize="18dp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#BFBFBF" />

            <Button
                android:text="@string/my_backing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/button10"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="#474747"
                android:textSize="18dp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#BFBFBF" />

            <Button
                android:text="@string/my_notback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/button11"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="#474747"
                android:textSize="18dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#BFBFBF" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:text="设置选项"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:id="@+id/button12"
                    style="?android:attr/buttonBarButtonStyle"
                    android:textColor="#474747" />
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#BFBFBF" />

                <Button
                    android:text="帮助"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:id="@+id/button13"
                    style="?android:attr/buttonBarButtonStyle"
                    android:textColor="#474747"
                    />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
